# HoldTranscribe

./: .gitignore  AUDIO_PLAYBACK.md  CHANGELOG.md  ELEVENLABS_QUICKSTART.md  INSTALL.md  LICENSE  MANIFEST.in  MOSHI_MIGRATION.md  README.md  TTS_SETUP.md  demo_elevenlabs_integration.py  demo_moshi_tts.py  pyproject.toml  requirements-tts.txt  requirements.txt  setup.py  setup_elevenlabs.py  test_audio_playback.py  test_elevenlabs_integration.py  test_moshi_tts.py  test_simple_tts.py  test_tts.py  voice_hold_to_clip.py
DOCS/: ARCHITECTURE.md  INSTALL_OSX.md  TTS_GUIDE.md
docs/: ELEVENLABS_TTS.md
examples/: elevenlabs_tts_example.py
holdtranscribe/: __init__.py  app.py  main.py
holdtranscribe/audio/: __init__.py
holdtranscribe/input/: __init__.py
holdtranscribe/models/: __init__.py  dia_model.py  elevenlabs_model.py  elevenlabs_wrapper.py  moshi_model.py  voxtral_model.py  whisper_model.py
holdtranscribe/tts/: README.md  __init__.py  app_wrapper.py  kyutai_simple.py  simple_cli.py
holdtranscribe/utils/: __init__.py
tests/: simple_tts.py  test_assistant_pipeline.py  test_dia_direct.py  test_model_loading.py  test_streaming.py  test_transcription.py  test_tts.py
